Added a unit test for MoveMultiData

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -87,6 +87,7 @@ set(TEST_NAMES
   GenerateColorTableTest
   ImportAsciDataArrayTest
   MatrixMathTest
+  MoveMultiDataTest
   QuaternionMathTest
   RawBinaryReaderTest
   ReadASCIIDataTest
