Updated the MoveDataTest to match current unit test layout as well as remove tests for other filters (Copy, RemoveArrays and the various Rename filters) to reduce this unit test to only the filter it was named after.  By including multiple filters regardless of the name, it becomes difficult to know which filters already have unit tests written for them.  In addition, all but the Copy filter already have unit tests written for them using the current unit test format.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -87,6 +87,7 @@ set(TEST_NAMES
   GenerateColorTableTest
   ImportAsciDataArrayTest
   MatrixMathTest
+  MoveDataTest
   MoveMultiDataTest
   QuaternionMathTest
   RawBinaryReaderTest
