Writing CreateStringArrayTest and modified CreateStringArray after finding that the number of components in StringDataArray is always 1.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -74,6 +74,7 @@ set(TEST_NAMES
   CreateDataArrayTest
   CreateFeatureArrayFromElementArrayTest
   CreateImageGeometryTest
+  CreateStringArrayTest
   DataArrayTest
   DataContainerBundleTest
   DataContainerTest
