Added unit test for CopyFeatureArrayToElementArray.  Added methods to AttributeMatrix to get a QVector<Type> with the types contained in an AttributeMatrix::Category as well as what Category a matrix fits into.

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -69,6 +69,7 @@ set(TEST_NAMES
   CombineAttributeMatricesTest
   ConditionalSetValueTest
   ConvertDataTest
+  CopyFeatureArrayToElementArrayTest
   CreateDataContainerTest
   CreateAttributeMatrixTest
   CreateDataArrayTest
