--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -88,6 +88,7 @@ set(TEST_NAMES
   FloatSummationTest
   GenerateColorTableTest
   ImportAsciDataArrayTest
+  LinkFeatureMapToElementArrayTest
   MatrixMathTest
   MoveDataTest
   MoveMultiDataTest
