--- a/Source/PipelineRunner/CMakeLists.txt
+++ b/Source/PipelineRunner/CMakeLists.txt
@@ -36,7 +36,7 @@ function(COMPILE_TOOL)
         VERSION_MINOR ${D3DTOOL_SIMPL_VER_MINOR}
         VERSION_PATCH ${D3DTOOL_SIMPL_VER_PATCH}
         BINARY_DIR    ${D3DTOOL_BINARY_DIR}
-        LINK_LIBRARIES Qt5::Core "${D3DTOOL_LINK_LIBRARIES}"
+        LINK_LIBRARIES "${D3DTOOL_LINK_LIBRARIES}"
         LIB_SEARCH_DIRS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         COMPONENT     ${D3DTOOL_COMPONENT}
         INSTALL_DEST  "${D3DTOOL_INSTALL_DEST}"
@@ -61,7 +61,7 @@ if(SIMPL_Group_PLUGIN AND SIMPL_Group_BASE AND SIMPL_Group_FILTERS)
       BINARY_DIR    ${${PROJECT_NAME}_BINARY_DIR}
       COMPONENT     Tools
       INSTALL_DEST  "${install_dir}"
-      LINK_LIBRARIES SIMPLib Qt5::Core
+      LINK_LIBRARIES SIMPLib
   )
 endif()
 
